--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,7 @@
 {
     "name": "faustbrian/exceptions",
     "description": "A collection of commonly used Exceptions.",
-    "keywords": [
-        "exceptions",
-        "Exceptions",
-        "Brian Faust",
-        "faustbrian"
-    ],
+    "keywords": ["exceptions", "Exceptions", "Brian Faust", "faustbrian"],
     "license": "MIT",
     "authors": [{
         "name": "Brian Faust",
@@ -18,11 +13,9 @@
         "php": "^5.6 || ^7.0"
     },
     "require-dev": {
-        "graham-campbell/testbench": "^3.1",
-        "mockery/mockery": "^0.9.4",
-        "phpunit/phpunit": "^5.0",
-        "scrutinizer/ocular": "~1.1",
-        "squizlabs/php_codesniffer": "~2.3"
+        "graham-campbell/testbench": "^3.2",
+        "mockery/mockery": "^0.9.5",
+        "phpunit/phpunit": "^5.6"
     },
     "autoload": {
         "psr-4": {
