--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,10 @@
     "authors": [{
         "name": "Brian Faust",
         "email": "hello@brianfaust.de",
-        "homepage": "https://brianfaust.de",
-        "role": "Developer"
+        "homepage": "https://brianfaust.de"
     }],
     "require": {
-        "php": "^5.6 || ^7.0"
+        "php": "^7.0"
     },
     "require-dev": {
         "graham-campbell/testbench": "^3.2",
